# Lista-Tarefas

./: README.md
back-end/: pyproject.toml
back-end/app/: settings.py
front-end/lista-tarefas/: README.md  package-lock.json  package.json
front-end/lista-tarefas/src/: App.vue
front-end/lista-tarefas/src/assets/: main.css
front-end/lista-tarefas/src/components/: Tarefas.vue
