[project]
name = "back-end-lista-tarefas"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lista-Tarefa", email = "otaviopax@gmail.com"},
]
dependencies = ["django>=5.1.7", "django>=5.1.7"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
